fix(tree-item): preserve the alignment of tree-items regardless of whether they have children

--- a/src/components/tree-item/tree-item.scss
+++ b/src/components/tree-item/tree-item.scss
@@ -7,7 +7,7 @@
 
 :host([selection-mode="none"]:not([has-children])) {
   .node-container {
-    margin-inline: theme("margin.3");
+    margin-inline: theme("margin.2");
   }
 }
 
